<?xml version="1.0"?>
<package>
  <name>bluefox</name>
  <version>0.0.0</version>
  <description>This is the bluefox package</description>

  <maintainer email="hyun91015@gmail.com">Changhyeon Kim</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
      <!-- For hhi_msgs -->
  </export>
</package>
